tests/baselines/reference/privateNameInObjectLiteral-1.errors.txt
<<<<<<< HEAD
tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-1.ts(2,5): error TS18016: Private names are not allowed outside class bodies.
=======
tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-1.ts(2,5): error TS18016: Private identifiers are not allowed outside class bodies.
>>>>>>> Add private instance field transformation, pr feedback


==== tests/cases/conformance/classes/members/privateNames/privateNameInObjectLiteral-1.ts (1 errors) ====
    const obj = {
        #foo: 1
        ~~~~
<<<<<<< HEAD
!!! error TS18016: Private names are not allowed outside class bodies.
=======
!!! error TS18016: Private identifiers are not allowed outside class bodies.
>>>>>>> Add private instance field transformation, pr feedback
    };
    